# cpp-amqp-demo

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md  conanfile.py
.circleci/: config.yml
src/: main.cpp  websockets.cpp  websockets_echo_client.cpp
test/: CMakeLists.txt  demo_test.cpp
